--- a/views/admin-lte/advanced-search/search-form.ejs
+++ b/views/admin-lte/advanced-search/search-form.ejs
@@ -3,40 +3,88 @@
 	<!--  Search Results  -->
 	<div class="container">
 
-		<!--Filters panel-->
-		<div class="col-md-3 no-float">
-			<div class="box" style="padding: 20px;" >
-				<select class="form-control" ng-model="sortBy">
-					<option value="" selected disabled>-- Sort by --</option>
-					<option selected value="score">Match score</option>
-					<option value="date">Creation date</option>
-                </select>
-			</div>
+		<div class="row">
+			<!--<h3 style="margin:0; padding:0;">Search everywhere...</h3>-->
 		</div>
 
-		<!--  matches  -->
-		<div class="col-md-4">
+		<div class="row">
 
-			<!-- No matches -->
-			<h3 ng-show="result != null && result.length === 0">No results found. Please, try a different search term.</h3>
+			<!--Filters panel-->
+			<div class="col-md-3">
+				<div>
 
-			<!--  Found matches -->
-			<ul class="products-list product-list-in-box">
-				<li class="item box" ng-repeat="item in result | orderBy:sortBy" style="margin: 5px; padding: 20px;">
-					<div class="product-img">
-						<!--<img src="/img/search/{{item.type}}.png" alt="Image">-->
-					</div>
-					<div class="product-info">
-						<a href="{{item.link}}" class="product-title">{{item.title}}
+					<fieldset style="margin-bottom:20px">
+						<legend style="padding:0; margin-bottom:5px">Sort order</legend>
+						<select class="form-control" ng-model="sortBy" ng-init="sortBy='-score'">
+						<option selected value="-score">Best match</option>
+						<option value="-date">Newest first</option>
+						<option value="date">Oldest first</option>
+               	 	</select>
+					</fieldset>
+
+					<fieldset style="margin-bottom:20px">
+						<legend style="padding:0; margin-bottom:5px">Search in</legend>
+						<label><input disabled checked type="checkbox" value="subTopic"> Topic</label><br/>
+						<label><input disabled checked type="checkbox" value="contentNode"> Content</label><br/>
+						<label><input disabled checked type="checkbox" value="course"> Course</label><br/>
+						<label><input disabled checked type="checkbox" value="videoAnnotation"> Video annotation</label><br/>
+						<label><input disabled checked type="checkbox" value="pdfAnnotation"> PDF annotation</label><br/>
+
+					</fieldset>
+				</div>
+			</div>
+
+			<!--  matches  -->
+			<div class="col-md-6">
+
+				<!-- No matches -->
+				<h3 style="text-align: center; padding-top:50px" ng-show="result != null && result.length === 0">No results found. Please, try a different search term.</h3>
+
+				<!--  Found matches -->
+				<legend ng-show="result != null && result.length > 0">{{result.length}} matches found.</legend>
+
+				<!-- results -->
+				<ul class="products-list product-list-in-box">
+					<li class="item box" ng-repeat="item in result | orderBy: sortBy" style="margin: 0 0 5px 0; padding: 10px">
+						<div class="product-img">
+							<img style="width:35px;height:35px" src="/img/search/{{item.type}}.png" alt="Image">
+						</div>
+						<div class="product-info">
+							<a href="{{item.link}}" class="product-title">{{item.title}}
                       		<span class="label pull-right"
 							  title="Match score. &#013;The higer the value, the better score. &#013;Label is also color coded, where 'Green' represents a good match, &#013;while 'Orange' and 'Red' are progressively worse."
 							  ng-class="{'label-success': (item.score >= 0.95), 'label-warning': (item.score < 0.95), 'label-danger': (item.score < 0.7)}"
 							  >{{item.score | number : 2}}</span></a>
-						<span class="product-description">{{item.description}}</span>
-						<span class="product-description">{{item.date | date : "dd-MM-yyyy 'at' h:mma"}}</span>
-					</div>
-				</li>
-			</ul>
+							<span class="product-description">{{item.description}}</span>
+							<span style="margin-top:5px" class="product-description  pull-right">{{item.date | date : "dd-MM-yyyy 'at' h:mma"}}</span>
+						</div>
+					</li>
+				</ul>
+			</div>
+
+			<!--  relevant matches -->
+			<div class="col-md-3">
+				<legend title="This content is not a direct match, &#013;but rather a relevant result, found by matching &#013;your search query with your personal network."
+					ng-show="relevant != null && relevant.length > 0">Relevant content</legend>
+
+				<!-- results -->
+				<ul class="products-list product-list-in-box">
+					<li class="item box" ng-repeat="item in relevant | orderBy: -score" style="margin: 0 0 5px 0; padding: 10px">
+						<div class="product-img">
+							<img style="width:35px;height:35px" src="/img/search/{{item.type}}.png" alt="Image">
+						</div>
+						<div class="product-info">
+							<a href="{{item.link}}" class="product-title">{{item.title}}
+                      		<span class="label pull-right"
+							  title="Match score. &#013;The higer the value, the better score. &#013;Label is also color coded, where 'Green' represents a good match, &#013;while 'Orange' and 'Red' are progressively worse."
+							  ng-class="{'label-success': (item.score >= 0.95), 'label-warning': (item.score < 0.95), 'label-danger': (item.score < 0.7)}"
+							  >{{item.score | number : 2}}</span></a>
+							<span class="product-description">{{item.description}}</span>
+							<span style="margin-top:5px" class="product-description  pull-right">{{item.date | date : "dd-MM-yyyy 'at' h:mma"}}</span>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </div>
