--- a/views/admin-lte/advanced-search/search-form.ejs
+++ b/views/admin-lte/advanced-search/search-form.ejs
@@ -15,8 +15,10 @@
 
 						<select class="form-control" ng-model="sortBy" ng-init="sortBy='-score'">
 						<option selected value="-score">Best match</option>
-						<option value="-date">Most recent</option>
-						<option value="date">Oldest first</option>
+						<option value="-created">Recently added</option>
+						<option value="created">Oldest first</option>
+						<option value="-updated">Recently updated</option>
+						<option value="updated">Recently not updated</option>
                	 	</select>
 					</fieldset>
 
@@ -37,8 +39,8 @@
 
 						<label title="The query lookup will be performed globally">
 							<input type="radio" ng-model="network" name="network" value="global" checked> Global</label><br/>
-						<label title="The query lookup will be performed only on content which you are engaged in">
-							<input type="radio" ng-model="network" name="netwrok" value="personal"> Personal</label><br/>
+						<label title="The query lookup will be performed only on content which you are owner of">
+							<input type="radio" ng-model="network" name="network" value="owned"> Owned</label><br/>
 						<label title="The query lookup will be performed on content which you and the people around you are engaged in">
 							<input disabled type="radio" ng-model="network" name="network" value="group"> Group</label>
 					</fieldset>
@@ -67,7 +69,7 @@
 							  ng-class="{'label-success': (item.score >= 0.95), 'label-warning': (item.score < 0.95), 'label-danger': (item.score < 0.7)}"
 							  >{{item.score | number : 2}}</span></a>
 							<span class="product-description">{{item.description}}</span>
-							<span style="margin-top:5px;font-size: 0.75em" class="product-description pull-right">{{item.date | date : "dd-MM-yyyy 'at' h:mma"}}</span>
+							<span style="margin-top:5px;font-size: 0.75em" class="product-description pull-right">{{item.created | date : "dd-MM-yyyy 'at' h:mma"}}</span>
 						</div>
 					</li>
 				</ul>
@@ -76,7 +78,7 @@
 			<!--  relevant matches -->
 			<div class="col-md-3">
 				<legend title="This content is not a direct match, &#013;but rather a relevant result, found by matching &#013;your search query with your personal network."
-					ng-show="relevant != null && relevant.length > 0">Relevant content</legend>
+					ng-show="relevant != null && relevant.length > 0">Relevant</legend>
 
 				<!-- results -->
 				<ul class="products-list product-list-in-box">
