--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -1,6 +1,8 @@
 <!-- REQUIRED JS SCRIPTS -->
 <script src="/socket.io/socket.io.js"></script>
 
+<script src="/bower/moment/moment.js"></script>
+
 <script src="/bower/jquery/dist/jquery.min.js"></script>
 <script src="/bower/jquery-ui/jquery-ui.min.js"></script>
 <script src="/bower/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
@@ -34,6 +36,9 @@
 <script src="/bower/angular-toastr/dist/angular-toastr.tpls.js"></script>
 
 <script src="/bower/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
+
+<script src="/bower/bootstrap-daterangepicker/daterangepicker.js"></script>
+<script src="/bower/angular-daterangepicker/js/angular-daterangepicker.min.js"></script>
 
 <script src="/bower/videogular/videogular.min.js"></script>
 <script src="/bower/videogular-controls/vg-controls.min.js"></script>
