--- a/views/admin-lte/advanced-search/search-form.ejs
+++ b/views/admin-lte/advanced-search/search-form.ejs
@@ -1,8 +1,5 @@
 <div style="padding-top: 20px" ng-controller="AdvancedSearchController">
-
-	<!--  Search Results  -->
 	<div class="container">
-
 		<div class="row">
 
 			<!--Filters panel-->
@@ -24,7 +21,7 @@
 
 					<!--Search in-->
 					<fieldset style="margin-bottom:20px">
-						<legend style="padding:0; margin-bottom:5px">Search in</legend>
+						<legend title="Defines which resources should the query look into" style="padding:0; margin-bottom:5px">Search in</legend>
 
 						<label><input type="checkbox" ng-model="resources.categories.selected"> Categories</label><br/>
 						<label><input type="checkbox" ng-model="resources.contentNodes.selected"> Content nodes</label><br/>
@@ -35,7 +32,7 @@
 
 					<!--Network-->
 					<fieldset style="margin-bottom:20px">
-						<legend style="padding:0; margin-bottom:5px">Network</legend>
+						<legend title="Defines in which network the query lookup will be performed" style="padding:0; margin-bottom:5px">Network</legend>
 
 						<label title="The query lookup will be performed globally">
 							<input type="radio" ng-model="network" name="network" value="global" checked> Global</label><br/>
@@ -45,8 +42,9 @@
 							<input disabled type="radio" ng-model="network" name="network" value="group"> Group</label>
 					</fieldset>
 
+					<!--Period-->
 					<fieldset style="margin-bottom:20px">
-						<legend style="padding:0; margin-bottom:5px">Period</legend>
+						<legend title="Set the period from which results will be considered" style="padding:0; margin-bottom:5px">Period</legend>
 
 						<div class="input-group">
 							<div class="input-group-addon">
@@ -65,7 +63,7 @@
 				<h3 style="text-align: center; padding-top:50px" ng-show="result != null && result.length === 0">No results found. Please, try a different search term.</h3>
 
 				<!--  Found matches -->
-				<legend ng-show="result != null && result.length > 0">{{result.length}} matches found for '{{searchTerm}} TODODODODO</legend>
+				<legend ng-show="result != null && result.length > 0">{{result.length}} matches found for '{{searchTerm}}'</legend>
 
 				<!-- results -->
 				<ul class="products-list product-list-in-box">
@@ -90,6 +88,26 @@
 			<div class="col-md-3">
 				<legend title="This content is not a direct match, &#013;but rather a relevant result, found by matching &#013;your search query with your personal network."
 					ng-show="relevant != null && relevant.length > 0">Relevant</legend>
+
+				<!-- results -->
+				<ul class="products-list product-list-in-box">
+					<li class="item box" ng-repeat="item in relevant | orderBy: -score" style="margin: 0 0 5px 0; padding: 10px">
+						<div class="product-img">
+							<img style="width:35px;height:35px" src="/img/search/{{item.type}}.png" alt="Image">
+						</div>
+						<div class="product-info">
+							<a href="{{item.link}}" class="product-title">{{item.title}}
+                      		<span class="product-description">{{item.description}}</span>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<legend title="Here you'll find the most popular content in CourseMapper"
+					ng-show="relevant != null && relevant.length > 0">Most popular</legend>
 
 				<!-- results -->
 				<ul class="products-list product-list-in-box">
