dev local setting

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -9,7 +9,7 @@
 <script src="/jsplumb/jquery.simulate.ext.js"></script>
 <script src="/jsplumb/jquery.simulate.drag-n-drop.js"></script>
 
-<script src="/bower/lodash/lodash.min.js"></script>
+<script src="/bower/lodash/lodash.js"></script>
 <script src="/bower/gridstack/dist/gridstack.min.js"></script>
 <script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/bower/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js"></script>
