--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -21,6 +21,7 @@
 	<link href="/css/global.css" rel="stylesheet" type="text/css" />
 	<link href="/css/app.css" rel="stylesheet" type="text/css" />
 	<link href="/css/posts.css" rel="stylesheet" type="text/css" />
+	<link href="/css/learningHub.css" rel="stylesheet" type="text/css" />
 	<link href="/bower/jquery-ui/themes/black-tie/jquery-ui.css" rel="stylesheet" type="text/css">
 
 	<link rel="stylesheet" type="text/css" href="/bower/ng-tags-input/ng-tags-input.min.css">
@@ -45,6 +46,9 @@
 
 	<link rel="stylesheet" href="/bower/bootstrap/dist/css/bootstrap.css" />
 	<link rel="stylesheet" href="/bower/bootstrap-daterangepicker/daterangepicker.css" />
+	<!-- Tags -->
+	<link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.min.css" />
+	<link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.bootstrap.min.css" />
 
 	<!-- Peer Assessment Css -->
 	<link href="/angular-peerassessment/peerAssessment.css" rel="stylesheet" type="text/css" />
