--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -47,11 +47,13 @@
 <script src="/bower/videogular-youtube/youtube.js"></script>
 <script src="/bower/vimeo-jquery-api/dist/jquery.vimeo.api.min.js"></script>
 <script src="/bower/videogular-vimeo/dist/vg-vimeo.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap-tpls.min.js"></script>
 
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/js/countmap/countmap.js"></script>
 <script src="/js/heartbeat/video-pulse.js"></script>
 <script src="/build/video-annotations.js"></script>
+
 
 <script src="/bower/highcharts/highstock.js"></script>
 <script src="/bower/highcharts-ng/dist/highcharts-ng.min.js"></script>
@@ -69,7 +71,8 @@
 <% } %>
 
 <script src="/build/courseMapper.js"></script>
-
+<!-- tags-->
+<script src="http://mbenford.github.io/ngTagsInput/js/ng-tags-input.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/bower/AdminLTE/dist/js/app.min.js" type="text/javascript"></script>
 <script src="/build/cm-utils.js" type="text/javascript"></script>
