--- a/views/admin-lte/treeNode/links/links.ejs
+++ b/views/admin-lte/treeNode/links/links.ejs
@@ -39,7 +39,7 @@
 
                         <div class="row">
                             <div class="col-xs-1">
-                                <voting vote-type="link" vote-type-id="{{bookmark._id}}" vote-value=""></voting>
+                                <voting class=""vote-type="link" vote-type-id="{{bookmark._id}}" vote-value=""></voting>
                             </div>
                             <div class="col-xs-11">
                                 <a title="Open in a New Tab"
