--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -21,7 +21,6 @@
 	<link href="/css/global.css" rel="stylesheet" type="text/css" />
 	<link href="/css/app.css" rel="stylesheet" type="text/css" />
 	<link href="/css/posts.css" rel="stylesheet" type="text/css" />
-	<link href="/css/learningHub.css" rel="stylesheet" type="text/css" />
 	<link href="/bower/jquery-ui/themes/black-tie/jquery-ui.css" rel="stylesheet" type="text/css">
 
 	<link rel="stylesheet" type="text/css" href="/bower/ng-tags-input/ng-tags-input.min.css">
@@ -49,9 +48,12 @@
 	<!-- Tags -->
 	<link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.min.css" />
 	<link rel="stylesheet" href="http://mbenford.github.io/ngTagsInput/css/ng-tags-input.bootstrap.min.css" />
-
+	<!-- Switch -->
+	<link href="/bower/angular-ui-switch/angular-ui-switch.min.css"  type="text/css" rel="stylesheet"/>
 	<!-- Peer Assessment Css -->
 	<link href="/angular-peerassessment/peerAssessment.css" rel="stylesheet" type="text/css" />
+	<!--LearnHub css-->
+	<link href="/css/learningHub.css" rel="stylesheet" type="text/css" />
 
 	<!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
