--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -47,6 +47,7 @@
 <script src="/bower/videogular-youtube/youtube.js"></script>
 <script src="/bower/vimeo-jquery-api/dist/jquery.vimeo.api.min.js"></script>
 <script src="/bower/videogular-vimeo/dist/vg-vimeo.min.js"></script>
+<script src="/bower/angular-ui-switch/angular-ui-switch.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap-tpls.min.js"></script>
 
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
