--- a/public/css/learningHub.css
+++ b/public/css/learningHub.css
@@ -1,183 +1,216 @@
-.controls{
+.controls {
     margin-top: 50px;
     margin-bottom: 50px;
 }
+
 /*box styles*/
-.box-default{
+.box-default {
     border-top-style: none;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
+
 .box-default:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
 /*video styles*/
-.video-box{
+.video-box {
     border-left-style: solid;
     border-left-width: 5px;
-    border-left-color:#428bca;
+    border-left-color: #428bca;
 }
-.description{
-    font-color:#444;
+
+.description {
+    font-color: #444;
 }
-.video-icon{
-    color:#428bca;
+
+.video-icon {
+    color: #428bca;
 }
+
 /*image style*/
-.image-box{
+.image-box {
     border-left-style: solid;
     border-left-width: 5px;
-    border-left-color:#FF736D;
+    border-left-color: #FF736D;
 }
-.image-icon{
-    color:#FF736D;
+
+.image-icon {
+    color: #FF736D;
 }
 
 /*audio style*/
-.audio-box{
+.audio-box {
     border-left-style: solid;
     border-left-width: 5px;
-    border-left-color:#C3CC2E;
+    border-left-color: #C3CC2E;
 }
-.audio-icon{
-    color:#C3CC2E;
+
+.audio-icon {
+    color: #C3CC2E;
 }
 
 /*slide style*/
-.slide-box{
+.slide-box {
     border-left-style: solid;
     border-left-width: 5px;
-    border-left-color:#53AFFF;
+    border-left-color: #53AFFF;
 }
-.slide-icon{
-    color:#53AFFF;
+
+.slide-icon {
+    color: #53AFFF;
 }
+
 /*doc style*/
-.doc-box{
+.doc-box {
     border-left-style: solid;
     border-left-width: 5px;
-    border-left-color:#CC2019;
-}
-.doc-icon{
-    color:#CC2019;
-}
-/*story style*/
-.story-box{
-    border-left-style: solid;
-    border-left-width: 5px;
-    border-left-color:#607F99;
-}
-.story-icon{
-    color:#607F99;
+    border-left-color: #CC2019;
 }
 
+.doc-icon {
+    color: #CC2019;
+}
 
 /*story style*/
-.pdf-box{
+.story-box {
     border-left-style: solid;
     border-left-width: 5px;
-    border-left-color:#1D7F78;
+    border-left-color: #607F99;
 }
-.pdf-icon{
-    color:#1D7F78;
+
+.story-icon {
+    color: #607F99;
 }
+
+/*story style*/
+.pdf-box {
+    border-left-style: solid;
+    border-left-width: 5px;
+    border-left-color: #1D7F78;
+}
+
+.pdf-icon {
+    color: #1D7F78;
+}
+
 /*link styles*/
-.link-box{
+.link-box {
     border-left-style: solid;
     border-left-width: 5px;
-    border-left-color:#FFCC00;
+    border-left-color: #FFCC00;
 }
-.link-icon{
-    color:#FFCC00;
+
+.link-icon {
+    color: #FFCC00;
 }
-.link-wrapper{
+
+.link-wrapper {
     background: transparent;
     max-height: 400px;
 }
-.image-wrapper img{
+
+.image-wrapper img {
     max-height: 400px;
     max-width: 100%;
 }
+
 /*title-styling*/
-.title-text{
+.title-text {
     font-size: 18px;
     padding-left: 0 !important;
     padding-right: 0 !important;
     font-weight: bolder;
 }
-.card-action{
-    font-color:#428bca;
+
+.card-action {
+    font-color: #428bca;
 }
-.card-action i{
-    font-size:16px;
-    font-size:2vw;
+
+.card-action i {
+    font-size: 16px;
+    font-size: 2vw;
 }
-.icon{
+
+.icon {
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
-.icon i{
-    font-size:16px;
-    font-size:2vw;
+
+.icon i {
+    font-size: 16px;
+    font-size: 2vw;
 }
 
-.image-wrapper{
+.image-wrapper {
     background: transparent;
     max-height: 500px;
 }
-.image-wrapper img{
+
+.image-wrapper img {
     max-height: 500px;
     max-width: 100%;
 }
+
 /*responsive rules*/
-@media (max-width:768px) {
-    .video-box{
+@media (max-width: 768px) {
+    .video-box {
         border-left-style: solid;
         border-left-width: 1px;
-        border-left-color:#428bca;
+        border-left-color: #428bca;
     }
-    .image-box{
+
+    .image-box {
         border-left-style: solid;
         border-left-width: 1px;
-        border-left-color:#FF736D;
+        border-left-color: #FF736D;
     }
-    .audio-box{
+
+    .audio-box {
         border-left-style: solid;
         border-left-width: 1px;
-        border-left-color:#C3CC2E;
+        border-left-color: #C3CC2E;
     }
-    .slide-box{
+
+    .slide-box {
         border-left-style: solid;
         border-left-width: 1px;
-        border-left-color:#53AFFF;
+        border-left-color: #53AFFF;
     }
-    .doc-box{
+
+    .doc-box {
         border-left-style: solid;
         border-left-width: 1px;
-        border-left-color:#CC2019;
+        border-left-color: #CC2019;
     }
-    .story-box{
+
+    .story-box {
         border-left-style: solid;
         border-left-width: 1px;
-        border-left-color:#607F99;
+        border-left-color: #607F99;
     }
-    .pdf-box{
+
+    .pdf-box {
         border-left-style: solid;
         border-left-width: 1px;
-        border-left-color:#1D7F78;
+        border-left-color: #1D7F78;
     }
-    .link-box{
+
+    .link-box {
         border-left-style: solid;
         border-left-width: 1px;
-        border-left-color:#FFCC00;
+        border-left-color: #FFCC00;
     }
-    .card-action i{
-        font-size:10px;
-        font-size:4vw;
+
+    .card-action i {
+        font-size: 10px;
+        font-size: 4vw;
     }
-    .icon i{
-        font-size:10px;
-        font-size:4vw;
+
+    .icon i {
+        font-size: 10px;
+        font-size: 4vw;
     }
 
 }
@@ -188,10 +221,12 @@ i {
 
 .modal-backdrop {
     /* bug fix - no overlay */
-    display: none; !important;
+    display: none;
+!important;
 }
 
-.tag{
+.tag {
     margin-right: 5px;
     padding: 2px 2px 2px 2px;
 }
+
