--- a/views/admin-lte/treeNode/learningHub/learningHub.ejs
+++ b/views/admin-lte/treeNode/learningHub/learningHub.ejs
@@ -1,10 +1,10 @@
-<div ng-controller="aggregationController" data-ng-init="init()">
+<div ng-controller="aggregationController">
     <!-- Container top-level functions-->
 
     <div class="row">
         <div class="col-xs-11 container fluid">
             <div class="container-fluid controls">
-                <div class=" col-xs-offset-1 col-md-11">
+                <div class=" col-xs-offset-1 col-xs-11">
                     <form class="form-inline">
                         <div class="form-group">
                             <select ng-model="postType" class="form-control"
@@ -18,8 +18,14 @@
                             <input type="text" name="search" class="form-control" placeholder="Search by tags or text"
                                    ng-model="query" ng-keypress="($event.charCode==13) ? search() : null">
                         </div>
-                        <div class="form-group pull-right">
-                            <button class="btn btn-primary pull-right" type="button" data-toggle="modal"
+                        <div class="form-group pull-right" >
+                            <switch id="enabled"  name="enabled" ng-model="enabled" on="On" off="Off" class="blue" ></switch>
+                        </div>
+                        <div class="form-group pull-right" style="margin-right: 15px">
+                            <label class="text-center">Private Space</label>
+                        </div>
+                        <div class="form-group pull-right" style="margin-right: 10px">
+                            <button class="btn btn-primary pull-right" class="form-control" type="button" data-toggle="modal"
                                     data-target="#Hubaddlink"> Add a link
                             </button>
                         </div>
@@ -28,16 +34,23 @@
             </div>
             <!-- Default page when there is no link added-->
 
-            <div class="container-fluid" ng-show="posts.length==0">
+            <div class="container-fluid" ng-show="posts.length==0 && !enabled ">
                 <div class="col-md-4 col-md-offset-4">
                     <h4>No posts found for this content<br>Press Add link on the top to add posts</h4>
                 </div>
             </div>
+            <!-- Default page when there is no link in personal space-->
+            <div class="container-fluid" ng-show="posts.length==0 && enabled ">
+                <div class="col-md-4 col-md-offset-4">
+                    <h4>No posts found in your personal space for this content<br></h4>
+                </div>
+            </div>
+
 
             <!-- End of DefaultPage -->
             <!-- presenting  the aggregated links from the DB-->
             <div class="container fluid" ng-show="posts.length>0">
-                <hub-link ng-repeat="post in posts" post="post"></hub-link>
+                <hub-link ng-repeat="post in posts" post="post" space="enabled"></hub-link>
             </div>
         </div>
     </div>
