comments show and hide problem solved

--- a/views/admin-lte/treeNode/learningHub/learningHub.ejs
+++ b/views/admin-lte/treeNode/learningHub/learningHub.ejs
@@ -26,7 +26,7 @@
                         </div>
                         <div class="form-group pull-right" style="margin-right: 10px">
                             <button class="btn btn-primary pull-right" class="form-control" type="button" data-toggle="modal"
-                                    data-target="#Hubaddlink"> Add a link
+                                    data-target="#Hubaddlink" ng-show="!enabled"> Add a link
                             </button>
                         </div>
                     </form>
