--- a/views/admin-lte/treeNode/learningHub/learningHub.ejs
+++ b/views/admin-lte/treeNode/learningHub/learningHub.ejs
@@ -21,7 +21,7 @@
                         <div class="form-group pull-right" >
                             <switch id="enabled"  name="enabled" ng-model="enabled" on="On" off="Off" class="green" ></switch>
                         </div>
-                        <div class="form-group pull-right" style="margin-right: 15px">
+                        <div class="form-group pull-right" style="margin-right: 5px; margin-left: 15px;">
                             <label class="text-center">Personal Space</label>
                         </div>
                         <div class="form-group pull-right" style="margin-right: 10px">
@@ -51,7 +51,7 @@
                 <hub-link ng-repeat="post in publicView" post="post" space="enabled"></hub-link>
             </div>
             <div class="container fluid" ng-show="personalPosts.length>0 && enabled">
-                <hub-link ng-repeat="post in personalView" post="post" space="enabled"></hub-link>
+                <hub-link ng-repeat="post in personalView | orderBy : sort" post="post" space="enabled"></hub-link>
             </div>
             <div class="container-fluid">
                 <div class="col-xs-4 col-xs-offset-4" ng-show="posts.length!=0 && !enabled ">
