--- a/views/admin-lte/advanced-search/search-form.ejs
+++ b/views/admin-lte/advanced-search/search-form.ejs
@@ -86,8 +86,8 @@
 
 			<!--  relevant matches -->
 			<div class="col-md-3">
-				<legend title="This content is not a direct match, &#013;but rather a relevant result, found by matching &#013;your search query with your personal network."
-					ng-show="relevant != null && relevant.length > 0">Relevant</legend>
+				<legend title="This content is not a direct match, &#013;but a recommended result, found by matching &#013;your search query with your personal network."
+					ng-show="relevant != null && relevant.length > 0">Recommendations</legend>
 
 				<!-- results -->
 				<ul class="products-list product-list-in-box">
