--- a/views/admin-lte/advanced-search/search-form.ejs
+++ b/views/admin-lte/advanced-search/search-form.ejs
@@ -111,10 +111,10 @@
                 <legend title="Here you'll find the most popular content in CourseMapper">
                     <div style="display: inline-block">
                         <span>Popular by</span>
-                        <select class="form-control" ng-model="popularBy" ng-init="popularBy='-activity'">
-                            <option selected value="-activity">highest activity</option>
-                            <option value="-users">number of users</option>
-                            <option value="-favorited">times added in favorites</option>
+                        <select class="form-control" ng-model="popularBy" ng-init="popularBy='activity'">
+                            <option selected value="activity">highest activity</option>
+                            <option value="users">number of users</option>
+                            <option value="favorited">times added in favorites</option>
                         </select>
                     </div>
                 </legend>
