Resolve JS/Bower issues

--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -112,7 +112,7 @@
 <% include jsfooter %>
 
 <!--add chart.js source-->
-<script src="/chartjs/Chart.min.js"></script>
+<script src="/bower/chart.js/Chart.min.js"></script>
 <script src="/chartjs/angular-chart.min.js"></script>
 
 <% include footer %>
