--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -5,7 +5,7 @@
 
 <script src="/bower/jquery/dist/jquery.min.js"></script>
 <script src="/bower/jquery-ui/jquery-ui.min.js"></script>
-<script src="/bower/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
+<script src="/bower/jquery.ui.touch-punch.min/index.js"></script>
 <script src="/jsplumb/jsPlumb-1.7.10.js"></script>
 <script src="/jsplumb/jquery.simulate.js"></script>
 <script src="/jsplumb/jquery.simulate.ext.js"></script>
@@ -75,7 +75,7 @@
 <!-- tags-->
 <script src="http://mbenford.github.io/ngTagsInput/js/ng-tags-input.min.js"></script>
 <!-- AdminLTE App -->
-<script src="/bower/AdminLTE/dist/js/app.min.js" type="text/javascript"></script>
+<script src="/bower/AdminLTE/dist/js/adminlte.min.js" type="text/javascript"></script>
 <script src="/build/cm-utils.js" type="text/javascript"></script>
 
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
